Fixing bug due to an ImmutableList